welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:6: error: ';' expected but 'if' found.
	} if (a==b || a==c || b==c)
          ^greenTicket:9: error: ';' expected but 'else' found.
	} else {
          ^